Fixing Gulp files, now it is kinda reasonable

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Hello World!</title>
+        <title>Hello!</title>        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/p5.min.js"></script>
     </head>
-    <body>
+    <body>                
         <p id="greeting">Loading ...</p>
         <script src="bundle.js"></script>
+        <script src="sketch.js"></script>
     </body>
 </html>
